# smart-shopping-with-ai-recommendations

./: Readme.md  evaluator.py  main.py  mock_data.json  pyproject.toml  ragas_evaluator.py  requirements.txt  server.py  smart-shopping-with-ai-recommendations.ipynb  start-app.sh
app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.css  App.tsx  RecommendStreamDemo.tsx  index.css
app/src/assets/: buesiness.json  shopping.json
app/src/components/: AIRecommendations.tsx  Cart.tsx  Features.tsx  Footer.tsx  Header.tsx  Hero.tsx  ProductGrid.tsx  ProductPrompt.tsx  Recommendations.tsx
app/src/components/ui/: button.tsx
app/src/lib/: cartStorage.ts
app/src/pages/: Index.tsx
backend/: golden_test.py  main.py  ragas_evaluator.py  requirements.txt
backend/helpers/: __init__.py  mapper.py
backend/services/: tavily.py
data/: data.json  mock_data.json  mock_data_huge.json  mock_data_large.json
