[project]
name = "smart-shopping-with-ai-recommendations"
version = "0.0.1"
description = "Smart shopping with AI Recommendations"
authors = [
    { name = "Ananta Bastola" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = "==3.12" 
dependencies = [
    "langgraph>=0.2.55",
    "langchain-community>=0.3.9",
    "langchain-openai>=0.3.5",
    "langchain-anthropic>=0.3.8",
    "openai>=1.61.0",
    "tavily-python>=0.5.0",
    "langchain-groq>=0.2.4",
    "exa-py>=1.8.9",
    "arxiv>=2.1.3",
    "pymupdf>=1.25.3",
    "xmltodict>=0.14.2",
    "jupyter>=1.1.1",
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "faiss-cpu",
    "scikit-learn",
    "ragas",
    "pillow",
    "datasets",
    "evaluate"
]
